public/stylesheets/laughs.css
*{
    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

form{
    display: flex;
    justify-content: center;
}
table{
    border: 2px solid black ;
    color: #F4F1EA;
    border-collapse: collapse;
    width: 100%;
}
thead{
    background-color: #61491d;
}
tbody tr:nth-child(odd) {
    background-color: #462a01;
    text-align: center;
  }

  tbody tr:nth-child(even) {
    background-color: #201303;
  }
td{
    padding: 2em;
}
li{
    list-style: none;
    padding: 1em;
}

#return {
    text-decoration: none;
    position: relative;
    top: 25px;
    left: 15px;
    padding: 8px 16px;
    border: none;
    background: #333;
    color: #f2f2f2;
    text-transform: uppercase;
    letter-spacing: .09em;
    border-radius: 2px;
}


/* ul{
    display: flex;
    justify-content: center;
} */

